--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: 'Trigger Workflow and Wait'
+name: 'Workflow and Wait'
 description: 'This action triggers a workflow in another repository and waits for the result.'
-author: 'Convictional'
+author: 'Rimz'
 branding:
   icon: 'arrow-right'
   color: 'yellow'
