--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -8,7 +8,7 @@ jobs:
     name: Run self-test
     runs-on: ubuntu-latest
     steps:
-      - uses: robinatwork1999/triggersync@master
+      - uses: robinatwork1999/triggersync@master-v2
         with:
             org: robinatwork1999
             repository: product-commerce
