--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -8,10 +8,10 @@ jobs:
     name: Run self-test
     runs-on: ubuntu-latest
     steps:
-      - uses: robinatwork1999/triggersync@master-v42
+      - uses: robinatwork1999/triggersync@master-v43
         with:
             org: robinatwork1999
             repository: product-commerce
             repo_token: ${{ secrets.TOKEN }}
             workflow_file_name: cc.yml
-            client_payload: '{"emailid": "11111"}' 
+            email: 11111
